--- a/Python note 0.ipynb
+++ b/Python note 0.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -497,8 +497,8 @@
      "output_type": "stream",
      "text": [
       "this problem will conver binary number to decimal\n",
-      "enter binary digits110101101\n",
-      "429\n"
+      "enter binary digits10010001\n",
+      "145\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -518,9 +518,9 @@
      "output_type": "stream",
      "text": [
       "this problem will conver decimal number to binary\n",
-      "enter decimal number873\n",
-      "0b1101101001\n",
-      "1101101001\n"
+      "enter decimal number87\n",
+      "0b1010111\n",
+      "1010111\n"
      ]
     }
    ],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -541,9 +541,11 @@
      "output_type": "stream",
      "text": [
       "this problem will conver decimal number to two's complement representation\n",
-      "enter decimal number-127\n",
+      "enter decimal number-111\n",
       "enter number of bits for two's complement representation8\n",
-      "00000001\n"
+      "[0, 1, 1, 0, 1, 1, 1, 1]\n",
+      "[1, 0, 0, 1, 0, 0, 0, 0]\n",
+      "10010001\n"
      ]
     }
    ],
@@ -555,34 +557,33 @@
     "if int(b)>2**(int(n)-1)-1 or int(b)<-(2**(int(n)-1)):\n",
     "    print(\"number is too big/small for\",n,\"bits two's complement representation\")\n",
     "else:\n",
-    "    binary=bin(int(b))[2:]\n",
     "    tcr=[0]*int(n)\n",
+    "    binary=bin(abs(int(b)))[2:]\n",
     "    offset=int(n)-len(binary)\n",
     "    for i in range(len(binary)):\n",
-    "        tcr[i+offset]=binary[i]\n",
+    "        if binary[i]=='0':\n",
+    "            tcr[i+offset]=0\n",
+    "        else:\n",
+    "            tcr[i+offset]=1\n",
     "    if(int(b)>0):\n",
     "        s=''\n",
     "        for i in tcr:\n",
     "            s=s+str(i)\n",
     "        print(s)\n",
     "    else:\n",
+    "        print(tcr)\n",
     "        for i in range(int(n)):\n",
     "            if tcr[i]==0:\n",
     "                tcr[i]=1\n",
     "            else:\n",
     "                tcr[i]=0\n",
-    "        c=0\n",
+    "        print(tcr)\n",
     "        for i in range(int(n)):\n",
-    "            if tcr[int(n)-1-i]==0 and c==0:\n",
+    "            if tcr[int(n)-1-i]==0:\n",
     "                tcr[int(n)-1-i]=1\n",
     "                break\n",
-    "            elif tcr[int(n)-1-i]==0 and c==1:\n",
-    "                tcr[int(n)-1-i]=0\n",
-    "            elif tcr[int(n)-1-i]==1 and c==1:\n",
-    "                tcr[int(n)-1-i]=1\n",
     "            else :\n",
     "                tcr[int(n)-1-i]=0\n",
-    "                c=1\n",
     "        s=''\n",
     "        for i in tcr:\n",
     "            s=s+str(i)\n",
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,11 +600,8 @@
      "output_type": "stream",
      "text": [
       "this problem will conver two's complement representation to decimal number\n",
-      "enter two's complement representation10001111\n",
-      "[1, 0, 0, 0, 1, 1, 1, 1]\n",
-      "[0, 1, 1, 1, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 0, 0, 0, 1]\n",
-      "-113\n"
+      "enter two's complement representation10010001\n",
+      "-111\n"
      ]
     }
    ],
@@ -626,16 +624,11 @@
     "        else:\n",
     "            tcr[i]=0\n",
     "    for i in range(len(b)):\n",
-    "        if tcr[len(b)-1-i]==0 and c==0:\n",
+    "        if tcr[len(b)-1-i]==0:\n",
     "            tcr[len(b)-1-i]=1\n",
     "            break\n",
-    "        elif tcr[len(b)-1-i]==0 and c==1:\n",
-    "            tcr[len(b)-1-i]=0\n",
-    "        elif tcr[len(b)-1-i]==1 and c==1:\n",
-    "            tcr[len(b)-1-i]=1\n",
     "        else :\n",
     "            tcr[len(b)-1-i]=0\n",
-    "            c=1\n",
     "    s=''\n",
     "    for i in tcr:\n",
     "        s=s+str(i)\n",
@@ -644,10 +637,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-0b1010100'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(-84)"
+   ]
   }
  ],
  "metadata": {
